update user api
