# backend/docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "hackchange",
+        "title": "hackchange api",
         "version": "1.0.0"
     },
     "paths": {
@@ -683,59 +683,6 @@
                 }
             }
         },
-        "/user/change_pass": {
-            "put": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Изменить пароль пользователя",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "Изменения пароля",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/schema.UserChangePassReq"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "id: идентификатор пользователя",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/schema.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/schema.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/user/courses": {
             "get": {
                 "consumes": [
@@ -804,7 +751,7 @@
                 }
             }
         },
-        "/user/edit": {
+        "/user/password": {
             "put": {
                 "consumes": [
                     "application/json"
@@ -815,7 +762,7 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Изменить профиль пользователя",
+                "summary": "Изменить пароль пользователя",
                 "parameters": [
                     {
                         "type": "string",
@@ -825,12 +772,12 @@
                         "required": true
                     },
                     {
-                        "description": "Изменения профиля",
+                        "description": "Изменения пароля",
                         "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/schema.StudentProfile"
+                            "$ref": "#/definitions/schema.UserChangePassReq"
                         }
                     }
                 ],
@@ -883,6 +830,57 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/schema.StudentProfile"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/schema.ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Изменить профиль пользователя",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Изменения профиля",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/schema.StudentProfile"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "id: идентификатор пользователя",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/schema.ErrorResponse"
                         }
                     },
                     "500": {
@@ -1181,7 +1179,7 @@
             "type": "object",
             "properties": {
                 "cource": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "date_of_birth": {
                     "type": "string"
